Adding foto on the products model and adding shopping cart controller

--- a/Loja/Loja/appsettings.json
+++ b/Loja/Loja/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Loja;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Loja;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "LojaContext": "Server=(localdb)\\mssqllocaldb;Database=LojaContext-dbfe0f52-1ddf-4833-a1a5-05e9ffc6c8e8;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
